source/test/compile/expected/fragment_attribute_stream.txt
In file included from include/meta/function_construction.hpp:8,
                 from include/rcgp.hpp:15,
                 from source/test/compile/fragment_attribute_stream.cpp:1:
include/meta/inject_arguments.hpp: In instantiation of ‘void rcgp::inject_one_argument(reference<other>&, InjectionCounters&) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto& ref = (& position)]’:
include/meta/inject_arguments.hpp:174:2:   required from ‘rcgp::inject_arguments<rcgp::ShaderStage::eFragment, std::nullptr_t, reference<position>, vector<float, 4> >(std::tuple<std::nullptr_t, reference<position>, vector<float, 4> >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1, 2}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1, 2>]’
  175 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:174:2:   required from ‘void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eFragment; Args = {std::nullptr_t, reference<position>, vector<float, 4>}]’
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:40:24:   required from ‘auto rcgp::trace(auto:82) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:82 = <lambda(std::nullptr_t, reference<position>, vec4)>]’
   40 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:64:26:   required from ‘auto rcgp::operator<<(_fn_tag<S>, auto:83) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:83 = <lambda(std::nullptr_t, reference<position>, vec4)>]’
   64 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
source/test/compile/fragment_attribute_stream.cpp:13:1:   required from here
   13 | };
      | ^
include/meta/inject_arguments.hpp:121:51: error: static assertion failed: AttributeStream is only valid for vertex or subroutine shaders
  121 |                         S == ShaderStage::eVertex || S == ShaderStage::eSubroutine,
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:121:51: note: ‘((rcgp::ShaderStage::eFragment == rcgp::ShaderStage::eVertex) || (rcgp::ShaderStage::eFragment == rcgp::ShaderStage::eSubroutine))’ evaluates to false
